fixup flicker

--- a/src/styles/background.less
+++ b/src/styles/background.less
@@ -8,6 +8,7 @@
     background-size: cover;
     background-position: center;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 body.background-day {
